# repository-reader

./: .gitignore  Dockerfile  README.md  Taskfile.yaml  docker-compose.yaml  pyproject.toml
context/: Dockerfile
context/cpu/: docker-compose.yaml
experimentation/: config.py  directory_lister.py  entrypoint.py  llm-outputs.md  pyproject.toml  rag.py  text.txt
project_module/src/project_module/directory_lister/: directory_lister.py  ignore_config.py  ignore_settings.yml  settings.yml  text.txt
src/.local/share/virtualenv/wheel/3.11/image/1/CopyPipInstall/pip-25.0.1-py3-none-any/pip-25.0.1.dist-info/: RECORD
src/experiment/: pyproject.toml
src/experiment/src/: entrypoint.py  test.txt
