[project]
name = "repository-reader"
version = "0.1.0"
description = "read and extract directory structure and source code."
authors = [
    {name = "None"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
